--- a/bernstein-vazirani.ipynb
+++ b/bernstein-vazirani.ipynb
@@ -16,16 +16,7 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.providers.basic_provider import BasicSimulator\n",
-    "from qiskit.visualization import plot_histogram\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
-    "from qiskit import quantum_info\n",
-    "from qiskit import transpile\n",
-    "from qiskit_aer import AerSimulator\n",
-    "from qiskit_aer.noise import NoiseModel\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "from qiskit.visualization import plot_histogram"
    ]
   },
   {
