--- a/ghz-state-dynamic.ipynb
+++ b/ghz-state-dynamic.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2: GHZ State using direct and dynamic approaches"
+    "### GHZ State using direct and dynamic approaches"
    ]
   },
   {
