--- a/iterative-QPE.ipynb
+++ b/iterative-QPE.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q4: Iterative Quantum Phase Estimation using Dynamic Circuits"
+    "### Iterative Quantum Phase Estimation using Dynamic Circuits"
    ]
   },
   {
@@ -208,31 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    " #### ------------------------------------------------------END of Q4------------------------------------------------------------\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Q5: Teleportation Circuit using Dynamic Circuits"
+    "### Teleportation Circuit using Dynamic Circuits"
    ]
   },
   {
