--- a/quantum-counting-QPE.ipynb
+++ b/quantum-counting-QPE.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q1: Counting no of solutions for Groover operator."
+    "### Counting no of solutions for Groover operator."
    ]
   },
   {
