--- a/teleportation.ipynb
+++ b/teleportation.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q3: Teleport Swap gates to distant qubits."
+    "### Teleport Swap gates to distant qubits."
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q5: Teleportation Circuit using Dynamic Circuits"
+    "### Teleportation Circuit using Dynamic Circuits"
    ]
   },
   {
