--- a/groover.ipynb
+++ b/groover.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2: Groover Algorithm without Ancilla"
+    "### Groover Algorithm without Ancilla"
    ]
   },
   {
