--- a/quantum-approximate-optimzation.ipynb
+++ b/quantum-approximate-optimzation.ipynb
@@ -29,7 +29,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question: 1"
+    "## MaxCut Graph Problem using QOAO (QUBO)\n",
+    "Using a toy graph, we can optimize the problem of max cut graph problem.\n",
+    "This approach uses a specialized version of QAOA - Quantum Approximate Optimization Algorithm called QUBO - Quantum Unconstraint Binary Optimization.\n",
+    "This approach is based on Adiabatic Quantum Algorithms internally exploiting the Suzuki Trotter approximation for approximating the evolution of Hamiltonians,\n",
+    "the energy of which we opt to minimize."
    ]
   },
   {
